--- a/public/input.css
+++ b/public/input.css
@@ -57,23 +57,23 @@ button {
   background-color: #f8f8f815;
 }
 
-.btn-primary {
+.btn-pulse {
   animation: buttonPulse 2s infinite;
 }
 
 @keyframes buttonPulse {
-  0% { box-shadow: 0 0 0 0 rgba(139, 92, 246, 0.4); }
+  0% { box-shadow: 0 0 0 0 rgba(131, 131, 200, 0.4); }
   70% { box-shadow: 0 0 0 10px rgba(139, 92, 246, 0); }
   100% { box-shadow: 0 0 0 0 rgba(139, 92, 246, 0); }
 }
 
 
-.btn-secondary {
+.btn-radial {
   position: relative;
   overflow: hidden; /* Ensures the effect stays within the button's bounds */
 }
 
-.btn-secondary::after {
+.btn-radial::after {
   content: '';
   position: absolute;
   top: 50%;
@@ -85,7 +85,7 @@ button {
   transition: transform 0.5s ease-out;
 }
 
-.btn-secondary:hover::after {
+.btn-radial:hover::after {
   transform: translate(-50%, -50%) scale(1);
 }
 
@@ -128,7 +128,8 @@ button {
 }
 
 .animated-underline-btn:hover {
-  color: rgb(212, 169, 255);
+  color: #cdcdd7;
+  text-shadow: rgba(132,132,148,0.9) 0px 0px 10px;
 }
 
 .animated-underline-btn::after {
@@ -138,7 +139,7 @@ button {
   left: 0;
   width: 100%;
   height: 1.5px;
-  background-color: rgb(212, 169, 255);
+  background-color: #cdcdd7;
   transform: scaleX(0);
   transform-origin: center;
   transition: transform 0.4s;
